# xspacechart

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  NEWS  README  README.md  THANKS  TODO  spacechart.html
data/: COPYING  README  bayer_flamsteed_names  combine_star_data.pl  gen_spacechart.pl  hip2spacechart.sh  proper_names  read_ccdm.pl
data/data_gliese-1.2/: ChangeLog  gliese2spacechart.pl  star_names
doc/: coordinates.txt  sample-spacechartrc
include/: config_dialog.h  gui.h  keys.h  link.h  link_config.h  link_draw_rules.h  link_index.h  link_selection.h  map.h  map_widget.h  perspective.h  rcparser.h  settings.h  star.h  star_catalog.h  star_config.h  star_draw_rules.h  star_index.h  star_info_dialog.h  star_list_dialog.h  star_selection.h  star_selection_dialog.h  starmap.h
pixmaps/: config.xpm  down.xpm  front.xpm  left.xpm  rear.xpm  right.xpm  selection.xpm  toggle_link_labels.xpm  toggle_links.xpm  toggle_star_labels.xpm  up.xpm
po/: ChangeLog  POTFILES.in  bg.gmo  bg.po  es.gmo  es.po  fr.gmo  fr.po  spacechart.pot
src/: common.c  config_dialog.c  gui.c  keys.c  link.c  link_config.c  link_draw_rules.c  link_index.c  link_selection.c  main.c  map.c  map_widget.c  perspective.c  rcparser_l.c  rcparser_l.l  rcparser_y.c  rcparser_y.h  rcparser_y.y  settings.c  star.c  star_catalog.c  star_config.c  star_draw_rules.c  star_index.c  star_info_dialog.c  star_list_dialog.c  star_selection.c  star_selection_dialog.c
